# smaug

./: .SRCINFO  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md
.devcontainer/: devcontainer.json
.github/workflows/: aur.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: command.rs  commands.rs  game_metadata.rs  main.rs
cli/src/commands/: add.rs  bind.rs  build.rs  config.rs  docs.rs  dragonruby.rs  init.rs  install.rs  new.rs  package.rs  publish.rs  run.rs
cli/src/commands/dragonruby/: install.rs  list.rs  uninstall.rs
cli/src/commands/package/: init.rs
cli/src/util/: dir.rs
cli/templates/: Package.toml.template  Project.toml.template  game_metadata.txt.template  gitignore  smaug.rb.template
data/: Package.toml  Smaug.toml
registry/: .env  Cargo.toml
registry/migrations/: 20210209151659_create_packages_table.sql  20210209152013_create_versions_table.sql
registry/src/: index.rs  lib.rs  main.rs
registry/src/routes/: ping.rs
registry/tests/: tests.rs
registry/tests/routes/: mod.rs  ping_test.rs
registry/tests/support/: mod.rs
smaug/: Cargo.toml
smaug/src/: config.rs  dependency.rs  dragonruby.rs  itch.rs  lib.rs  project.rs  registry.rs  resolver.rs  smaug.rs  source.rs
smaug/src/sources/: dir_source.rs  file_source.rs  git_source.rs  mod.rs  registry_source.rs  url_source.rs
smaug/src/util/: dir.rs  mod.rs
src/: commands.rs  config.rs  dependency.rs  digest.rs  dragonruby.rs  file.rs  git.rs  init.rs  install.rs  lock.rs  main.rs  new.rs  package_config.rs  project_config.rs  run.rs  smaug.rs  uninstall.rs  url.rs  utils.rs
src/commands/: build.rs  init.rs  install.rs  new.rs  package.rs  publish.rs  run.rs
src/commands/dragonruby/: install.rs  uninstall.rs
