[package]
name = "smaug"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
directories = "3.0.1"
exitcode = "1.1.2"
walkdir = "2"
zip = "0.5"
