[package]
name = "smaug"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
directories = "3.0.1"
exitcode = "1.1.2"
git2 = "0.13"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
scrawl = "1.1.0"
shellexpand = "2.1"
stderrlog = "0.5"
toml = {version = "0.5.3", features = ["preserve_order"]}
url = "2.2.0"
walkdir = "2"
zip = "0.5"
zip-extensions = "0.6.0"
