[package]
name = "smaug-cli"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smaug = { path = "../smaug" }

clap = "3.0.0-beta.2"
derive_more = "0.99.11"
log = "0.4"
question = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
stderrlog = "0.5"
tinytemplate = "1.1"
zip = "0.5"
zip-extensions = "0.6.0"
