[package]
name = "smaug-cli"
version = "0.3.1"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "smaug"
path = "src/main.rs"


[dependencies]
smaug = { path = "../smaug" }

clap = "3.0.0-beta.2"
derive_more = "0.99.11"
log = "0.4"
question = "0.2.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rm_rf = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stderrlog = "0.5"
tinytemplate = "1.1"
toml = "0.5.8"
toml_edit = "0.2.0"
zip = "0.5"
zip-extensions = "0.6.0"
