[package]
name = "smaug-registry"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smaug = { path = "../smaug" }

semver = { version = "0.11", features = ["serde"] }
