[package]
name = "smaug-registry"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smaug = { path = "../smaug" }

actix-rt = "1.1.1"
actix-web = "3"
dotenv = "0.15.0"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = "0.2.22"
