[package]
name = "smaug"
version = "0.1.0"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
directories = "3.0.1"
log = "0.4"
regex = "1"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
url = "2.2.0"
zip = "0.5"
zip-extensions = "0.6.0"
