[package]
name = "smaug"
version = "0.2.3"
authors = ["Matt Pruitt <matt@guitsaru.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9"
derive_more = "0.99.11"
directories = "3.0.1"
git2 = "0.13"
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
log = "0.4"
regex = "1"
relative-path = { version = "1.3.2", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rm_rf = "0.6.1"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
shellexpand = "2.1"
toml = { version = "0.5.8", features = ["preserve_order"] }
url = "2.2.0"
walkdir = "2"
zip = "0.5"
zip-extensions = "0.6.0"
